Uploading the whole catalog and listing restocks